--- a/solver/index.html
+++ b/solver/index.html
@@ -200,7 +200,7 @@
     A--&gt;|R| C
     C--&gt;|L| A
 </code></pre>
-<p>这是一个以<strong>状态</strong>(State)为节点(Vertex), <strong>动作</strong>(Action)为边(Edge)的有向图.<br />
+<p>这是一个以状态(State)为节点(Vertex), 动作(Action)为边(Edge)的有向图.<br />
 其中 $A$ 为初始状态(Initial state, IS), $C$ 为目标状态(Goal state, GS), <code>l</code> 和 <code>r</code> 分别表示玩家向左和向右移动, <code>R</code> 和 <code>L</code> 分别表示玩家向右推动和向左拉动.</p>
 <p>理论上, 状态 $C$ 还可以衍生出更多子状态, 但因为其是目标状态, 搜索算法无需继续搜索, 因此这里不再展开.</p>
 <p>求解器的工作是进行空间状态搜索<sup class="footnote-reference"><a href="#1">1</a></sup>, 即首先根据初始状态生成推箱子关卡的图, 然后在这个图中寻找从初始状态到目标状态的路径. 以上图为例, 就是寻找从状态 $A$ 到状态 $C$ 的路径, 即 <code>R</code>.</p>
